--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,15 +29,6 @@ set(BCOS_CRYPTO_CMAKE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/cmake" CACHE PATH "The cm
 list(APPEND CMAKE_MODULE_PATH ${BCOS_CMAKE_SCRIPTS_DIR})
 list(APPEND CMAKE_MODULE_PATH ${BCOS_CRYPTO_CMAKE_DIR})
 
-if((NOT DEFINED HUNTER_ENABLED) OR (HUNTER_ENABLED))
-    include(HunterGate)
-    HunterGate(
-        URL "https://${URL_BASE}/FISCO-BCOS/hunter/archive/2b5b25ecffaba74393740bf0b8758c4e8d9297cf.tar.gz"
-        SHA1 "5d8365a327be260cf24d2b125a71ee7069aca28f"
-        FILEPATH "${BCOS_CRYPTO_CMAKE_DIR}/config.cmake"
-    )
-endif()
-
 project(bcos-crypto VERSION "1.0.0")
 set(VERSION_SUFFIX "")
 
@@ -49,8 +40,7 @@ include(CompilerSettings)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-SET(Boost_USE_STATIC_LIBS ON)
-include(InstallDep)
+# SET(Boost_USE_STATIC_LIBS ON)
 
 # add source directory
 include(Sources)
@@ -58,7 +48,7 @@ include(Sources)
 set(BCOS_CRYPTO_TARGET bcos-crypto)
 add_library(${BCOS_CRYPTO_TARGET} ${SRC_LIST} ${HEADERS})
 include_directories(${Boost_INCLUDE_DIRS})
-target_link_libraries(${BCOS_CRYPTO_TARGET} PUBLIC ${DependLibraries} Boost::log)
+target_link_libraries(${BCOS_CRYPTO_TARGET} PUBLIC ${DependLibraries})
 
 if(DEMO)
     add_subdirectory(demo)
