--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -82,7 +82,7 @@ jobs:
           cd build
           cmake3 -DCMAKE_BUILD_TYPE=Release -DTESTS=ON DEMO=ON -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
       - name: Compile
-        run: 
+        run: |
           cd build && cmake3 --build . --parallel || echo 'failed!'
           cat /__w/bcos-crypto/bcos-crypto/build/bcos-utilities-prefix/src/bcos-utilities-build/vcpkg-manifest-install.log
           cat /__w/bcos-crypto/bcos-crypto/vcpkg/buildtrees/liblzma/install-x64-linux-dbg-out.log
