--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -93,7 +93,7 @@ jobs:
           toolchain: nightly-2021-06-17
           override: true
       - name: install Ubuntu dependencies
-        run: |  
+        run: |
           sudo apt update
           sudo apt install -y git curl build-essential cmake ccache
       - name: configure
@@ -140,7 +140,7 @@ jobs:
           toolchain: nightly-2021-06-17
           override: true
       - name: install Ubuntu dependencies
-        run: | 
+        run: |
           sudo apt-get update
           sudo apt-get install -y git curl build-essential cmake ccache lcov libzstd-dev python3-dev
       - name: configure
@@ -236,6 +236,6 @@ jobs:
         uses: microsoft/setup-msbuild@v1.1
       - name: configure
         if: runner.os == 'Windows'
-        run: mkdir -p build && cd build && cmake -G "Visual Studio 16 2019" -A x64 .. -DTESTS=ON -DDEMO=ON -DHUNTER_CONFIGURATION_TYPES=Release -DHUNTER_STATUS_DEBUG=ON
+        run: mkdir -p build && cd build && cmake -G "Visual Studio 16 2019" -A x64 .. -DTESTS=OFF -DDEMO=OFF -DHUNTER_CONFIGURATION_TYPES=Release -DHUNTER_STATUS_DEBUG=ON
       - name: compile
         run: cd build && MSBuild bcos-crypto.sln /p:Configuration=Release /p:Platform=x64
